# pac-bayes-conformal-prediction

./: .gitignore  README.md  setup.cfg
experiments/: 0_train_model.py  1_calibrate_model.py  2_eval_model.py  mnist_results.ipynb  mnist_utils.py  regression_results.ipynb  regression_utils.py  theory_figs.ipynb  utils.py
experiments/conf/: defaults.yaml
experiments/conf/calibrate/: base.yaml  confpred.yaml  learnable.yaml  pacbayes.yaml
experiments/conf/experiment/: mnist.yaml  toy.yaml
experiments/conf/model/: bnn_lenet.yaml  lenet.yaml  mlp.yaml
experiments/conf/train/: default.yaml
src/confpred/: base.py  optim.py  paramdists.py  pred_sets.py  score_functions.py  utils.py
src/confpred/predictors/: __init__.py  pacbayes.py  standard.py
src/confpred/softsort/: neural_sort.py
src/confpred_eval/datasets/: __init__.py  mnist.py  toy.py
src/confpred_eval/models/: __init__.py  bnn.py  lenet.py  mlp.py
tests/: test_soft_quantile.py
