[metadata]
name = confpred
version = 0.1.0
author = Apoorva Sharma
author_email = apoorvas@nvidia.com
description = PAC Bayes guaranteed conformal prediction sets
long_description = file: README.md
long_description_content_type = text/markdown
license = NSCL v1

[options]
package_dir =
    = src
packages = confpred, confpred_eval
python_requires = >=3.8
install_requires =
    hydra-core~=1.3.2
    matplotlib~=3.6.2
    numpy~=1.23.5
    omegaconf~=2.3.0
    pandas~=1.5.2
    scipy~=1.11.3
    seaborn~=0.13.0
    torch~=1.13.0
    torchvision~=0.14.0
    tqdm~=4.64.1

[options.packages.find]
where = src

[options.extras_require]
dev =
    black
    isort
    pytest
    pytest-xdist
